# do-latte

./: .gitignore  Cargo.toml
src/: action.rs  app.rs  components.rs  main.rs  todo_item.rs  tui.rs  utils.rs  widgets.rs
src/components/: categories_component.rs  component.rs  popups.rs  todo_list_component.rs
src/components/popups/: todo_popup_component.rs
src/utils/: liner_builder.rs
src/widgets/: categories_widget.rs  component.rs  known_size.rs  known_size_wrapper.rs  popup.rs  popup_layout.rs  popup_state.rs  todo_list_widget.rs
