[package]
name = "do-latte"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.*", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.*", features = ["full"] }
anyhow = "1.0.101"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
futures = "0.3.32"
