[package]
name = "do-latte"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.*", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.*", features = ["full"] }
color-eyre = "0.6.5"
ratatui = "0.30.0"
crossterm = { version = "0.29.0", features = ["serde", "event-stream"] }
futures = "0.3.32"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"
derive_setters = "0.1.9"
